# pyvideothumbnailer

./: .gitignore  .pyvideothumbnailer.conf  LICENSE  README.md  create_pypi_package.sh  pyproject.toml  pyvideothumbnailer  pyvideothumbnailer.py
src/pyvideothumbnailer/: pyvideothumbnailer.py  videothumbnailer.py
