[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyvideothumbnailer"
version = "2.0.3"
authors = [
  { name="Harald Hetzner", email="57875126+hhtznr@users.noreply.github.com" },
]
description = "A command line tool for creating video preview thumbnails images."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
dependencies = [
    "av >= 9.0.0",
    "pymediainfo >= 4.3",
    "Pillow >= 9.2.0"
]

[project.urls]
"Homepage" = "https://github.com/hhtznr/pyvideothumbnailer"
"Bug Tracker" = "https://github.com/hhtznr/pyvideothumbnailer/issues"

[project.scripts]
pyvideothumbnailer = "pyvideothumbnailer.videothumbnailer:main"

